--- a/style.css
+++ b/style.css
@@ -73,3 +73,17 @@ footer a {
 footer a:hover {
   text-decoration: underline;
 }
+.coordonnees {
+  margin-top: 40px;
+  font-size: 0.9rem;
+}
+
+.coordonnees a {
+  color: #7b1e1e;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.coordonnees a:hover {
+  text-decoration: underline;
+}
